add top stripe color

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <html> 
-<title>
 
-hello
-
-</title>
+<head>
+   <title>Welcome</title>
+   <link rel="stylesheet" type="text/css" href="css/TopStripe.css">
+</head>
 
 
 <body>
+
+<div id="colorstrip"/>
 <p>I am deeply worried  today</p>
 </body>
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
