change color stipe

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html> 
 
 <head>
@@ -8,7 +9,10 @@
 
 <body>
 
-<div id="colorstrip"/>
+<div id="colorstrip">
+</div>
+
+
 <p>I am deeply worried  today</p>
 </body>
 
