add a site logo and browser logo

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html> 
 
 <head>
-   <title>Welcome</title>
-   <link rel="stylesheet" type="text/css" href="css/TopStripe.css">
+   <title>Welcome</title>                                               <!-- title -->
+   <link rel="stylesheet" type="text/css" href="css/TopStripe.css">     <!-- css file -->
+
+   <link rel="icon" type="image/png" href="img/catbear.png">            <!-- logo next to the browser tab-->
+   
 </head>
 
 
 <body>
 
 <div id="colorstrip">
+     <img src="img/catbear.png" width="128" height="128" alt="logo">
 </div>
 
 
-<p>I am deeply worried  today</p>
 </body>
 
 
