Adding coding section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 </div>
 
 
+
+<script>
+   <button onlcick="window.loation.href='code/codingProblemsLayout.html'">Code Practice</button>
+
+</script>
+
+
+
+
+
+
+
+
 </body>
 
 
