correct the typo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <script>
-   <button onlcick="window.loation.href='code/codingProblemsLayout.html'">Code Practice</button>
+   <button onclick="window.loation.href='code/codingProblemsLayout.html'">Code Practice</button>
 
 </script>
 
