adding javascript function

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
    <title>Welcome</title>                                               <!-- title -->
    <link rel="stylesheet" type="text/css" href="css/TopStripe.css">     <!-- css file -->
-
+   <script type="text/javascript" src="js/utilityFunction.js"></script> <!-- javascript file-->
+   
    <link rel="icon" type="image/png" href="img/catbear.png">            <!-- logo next to the browser tab-->
    
 </head>
@@ -18,13 +19,8 @@
 
 
 
-<script>
-   <button onclick="window.loation.href='code/codingProblemsLayout.html'">Code Practice</button>
 
-</script>
-
-
-
+<button onclick="goToCodingLayout();">Coding</button>
 
 
 
