decorate the website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
    <title>Welcome</title>                                               <!-- title -->
-   <link rel="stylesheet" type="text/css" href="css/TopStripe.css">     <!-- css file -->
-   <script type="text/javascript" src="js/utilityFunction.js"></script> <!-- javascript file-->
+   <link rel="stylesheet" type="text/css" href="css/utility.css">     <!-- external css file -->
+   <script type="text/javascript" src="js/utilityFunction.js"></script> <!-- external javascript file-->
+   
    
    <link rel="icon" type="image/png" href="img/catbear.png">            <!-- logo next to the browser tab-->
    
@@ -14,13 +15,12 @@
 <body>
 
 <div id="colorstrip">
-     <img src="img/catbear.png" width="128" height="128" alt="logo">
+     <img src="img/catbear.png" width="128" height="128" alt="logo">    <!-- color ribbon -->
 </div>
 
 
 
-
-<button onclick="goToCodingLayout();">Coding</button>
+<button id="codeButton" onclick="goToCodingLayout();">Coding</button>   <!-- button -->
 
 
 
