--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -2,15 +2,26 @@
 
 <head>
     <title>Coding Challenge</title>
+   <link rel="stylesheet" type="text/css" href="../css/utility.css">     <!-- external css file -->
+
 </head>
 
 <body>
-<h2> DFS(search, backtrack, permutation, subset)</h1>
+
+
+<div class="codingSectionName"> DFS(search, backtrack, permutation, subset)
+</div>
+
+
 <ul>
-    <li> <a href="code/permutation.html">permutation</a> </li>
-    <li> permutation ii </li>
+    <li> <a href="solution/permutation.html">Permutation</a> </li>
+    <li> Permutation ii </li>
 	<li> String permutation ii </li>
 </ul>
+
+
+
+
 
 </body>
 
