--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -15,8 +15,8 @@
 
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
-    <li> Permutation ii </li>
-	<li> String permutation ii </li>
+    <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
+    <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
 </ul>
 
 
