correct chinese input

--- a/html/solution/String permutation ii.html
+++ b/html/solution/String permutation ii.html
@@ -46,8 +46,8 @@ public class Solution {
 
 Last Modified by Lyn at 11/28/2016 First Time
 
-知识点，如何sort string ( String->charArray->sort->String )
-Permutaion ii 模板 一样的
+sort string ( String->charArray->sort->String )
+Permutaion ii
 
 </code></pre>
 </body>
