added link button and html

--- a/html/solution/permutation-ii.html
+++ b/html/solution/permutation-ii.html
@@ -43,6 +43,15 @@ class Solution {
     }
 }
 
+模型为以下， 每层都一样，所以需要visited[i]保征每个位置只能取一次，和重复的处理方法
+
+12245
+12245
+12245
+12245
+12245
+
+
 Last modified  11/28 by Lyn Zeng
 
 1. 用一个boolean array 来根据index位置去重。
