--- a/html/solution/permutation.html
+++ b/html/solution/permutation.html
@@ -38,6 +38,14 @@ class Solution {
     }
 }
 
+模型为以下， 每层都一样，所以需要visited[i]保征每个位置只能取一次 
+
+12345
+12345
+12345
+12345
+12345
+
 last modified 12/01/2017
 DFS + 用boolean[] 去重， 里面存位置，而不是实际的值
 </code></pre>
