--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <button id="codeButton" onclick="goToCodingLayout();">Coding</button>   <!-- button -->
-
+<button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
 
 
 
