--- a/html/usefulWebsite.html
+++ b/html/usefulWebsite.html
@@ -3,11 +3,16 @@
 
 
 <body>
-<h2>Useful Link</h2>
+<h1 style="text-align:center">Useful Link</h1>
 
-
+<h2>St. Louis Local</h2>
 <a href="http://graphics.stltoday.com/apps/payrolls/salaries/agencies/">St. Louis Government, teacher Salary in Missouri</a> <br>
 <a href="http://revenue.stlouisco.com/ias/">St. Louis County Real Estate Information</a> <br>
+
+
+<h2>Web Development</h2>
+<a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">How to host a static web on Github</a> <br>
+<a href="http://www.w3schools.com/html/html_css.asp">CSS inline, internal, external syntax</a>  <br>
 
 </body>
 
