make the cursor change when hover

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-<button id="codeButton" onclick="goToCodingLayout();">Coding</button>   <!-- button -->
+<button id="codeButton" onclick="goToCodingLayout();">Code</button>   <!-- button -->
 <button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
 
 
