--- a/html/usefulWebsite.html
+++ b/html/usefulWebsite.html
@@ -11,8 +11,9 @@
 
 
 <h2>Web Development</h2>
-<a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">How to host a static web on Github</a> <br>
-<a href="http://www.w3schools.com/html/html_css.asp">CSS inline, internal, external syntax</a>  <br>
+<a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">Host website on Github</a> <br>
+<a href="http://www.w3schools.com/html/html_css.asp">CSS syntax</a>  <br>
+<a href="https://aws.amazon.com/free/">Host website on AWS</a>
 
 </body>
 
