added letter combination

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -17,6 +17,7 @@
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
     <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
+	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
 </ul>
 
 
