--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -9,10 +9,11 @@
 <body>
 
 
-<div class="codingSectionName"> DFS(search, backtrack, permutation, subset)
+<div class="codingSectionName"> DFS(search)
 </div>
 
 
+<h2>Permutation format(position related)</h2>
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
@@ -20,7 +21,8 @@
 	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
 </ul>
 
-
+<br>
+<h2>Subset format (no position)</h2>
 
 
 
