--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -13,7 +13,7 @@
 </div>
 
 
-<h2>Permutation format(position related)</h2>
+<div class="codingSubSectionName">Permutation format(position related)</codingSubSectionName>
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
@@ -22,8 +22,7 @@
 </ul>
 
 <br>
-<h2>Subset format (no position)</h2>
-
+<div class="codingSubSectionName">Subset format (no position)</codingSubSectionName>
 
 
 </body>
