added subset subset-ii

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -13,7 +13,7 @@
 </div>
 
 
-<div class="codingSubSectionName">Permutation format(position related)</codingSubSectionName>
+<div class="codingSubSectionName">Permutation format(Global Search)</codingSubSectionName>
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
@@ -22,8 +22,11 @@
 </ul>
 
 <br>
-<div class="codingSubSectionName">Subset format (no position)</codingSubSectionName>
-
+<div class="codingSubSectionName">Subset format(Forward Search)</codingSubSectionName>
+<ul>
+     <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">(Do)</a>  </li>  
+	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">(Do)</a></li>
+</ul>
 
 </body>
 
