convert to utf-8 without bom

--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -33,13 +33,13 @@ class Solution {
 </body>
 
 <div style="color : red; font-size:30px">
-Subset£¨forward search£©<br>
-£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡×éºÏÄ£°å±Ç×æ£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡£¡<br>
+Subsetï¼ˆforward searchï¼‰<br>
+ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ç»„åˆæ¨¡æ¿é¼»ç¥–ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼ï¼<br>
 <br>
-ºÍÎ»ÖÃÎÞ¹Ø£¬ Àý×Ó [1£¬2£¬3]ÊÇ½â£¬ [1£¬3£¬2]Ôò²»ÊÇ½â£¬ÒòÎª²»ÄÜÓÐÖØ¸´<br>
-ÊäÈëÎª £º ´óÈÝÆ÷£¬Ð¡ÈÝÆ÷£¬ Ç°½ø¿ØÖÆÕûÊý£¬ ÊäÈë<br>
+å’Œä½ç½®æ— å…³ï¼Œ ä¾‹å­ [1ï¼Œ2ï¼Œ3]æ˜¯è§£ï¼Œ [1ï¼Œ3ï¼Œ2]åˆ™ä¸æ˜¯è§£ï¼Œå› ä¸ºä¸èƒ½æœ‰é‡å¤<br>
+è¾“å…¥ä¸º ï¼š å¤§å®¹å™¨ï¼Œå°å®¹å™¨ï¼Œ å‰è¿›æŽ§åˆ¶æ•´æ•°ï¼Œ è¾“å…¥<br>
 <br>
 Note:<br>
 1. for( int i= level ; ; )   <br>
-2. dfs(, , , i+1)            ÕâÀïÈ¡i+1±£Ö¤ÁËÏÂÒ»²ãÒ»Ö±ÍùÇ°×ß£¬²»»áÍ·¡£ ×¢Òâ²»ÒªÐ´³ÉÁËlevel+1, ÕâÊÇ²»¶ÔµÄ£¬ÒòÎªlevelµÄÖµÔÚforÑ­»·ÄÚÊÇ²»»á±äµÄ¡£<br>
+2. dfs(, , , i+1)            è¿™é‡Œå–i+1ä¿è¯äº†ä¸‹ä¸€å±‚ä¸€ç›´å¾€å‰èµ°ï¼Œä¸ä¼šå¤´ã€‚ æ³¨æ„ä¸è¦å†™æˆäº†level+1, è¿™æ˜¯ä¸å¯¹çš„ï¼Œå› ä¸ºlevelçš„å€¼åœ¨forå¾ªçŽ¯å†…æ˜¯ä¸ä¼šå˜çš„ã€‚<br>
 </div>
