--- a/html/solution/subsets-ii.html
+++ b/html/solution/subsets-ii.html
@@ -42,8 +42,8 @@ class Solution {
 
 <div style="color : red; font-size:30px">
 Note:
-1 ºÍsubset Çø±ğÔÚÓÚ ÊäÈëÎª[1,2,2]¿ÉÄÜ»áÓĞÖØ¸±µÄÊı×Ö<br>
-2 ½â·¨Îª´«Ò»¸öboolean[]½øÈ¥£¬ µ±Ç°ÊıºóÇ°ÃæÊıÒ»ÑùµÄÊ±ºò£¬±ØĞëÇ°Ãæ·ÃÎÊÁË²ÅĞĞ      if ( i>=1 && nums[i] == nums[i-1] && !visited[i-1]){
+1 å’Œsubset åŒºåˆ«åœ¨äº è¾“å…¥ä¸º[1,2,2]å¯èƒ½ä¼šæœ‰é‡å‰¯çš„æ•°å­—<br>
+2 è§£æ³•ä¸ºä¼ ä¸€ä¸ªboolean[]è¿›å»ï¼Œ å½“å‰æ•°åå‰é¢æ•°ä¸€æ ·çš„æ—¶å€™ï¼Œå¿…é¡»å‰é¢è®¿é—®äº†æ‰è¡Œ      if ( i>=1 && nums[i] == nums[i-1] && !visited[i-1]){
 
 
 </div>
