--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -24,8 +24,10 @@
 <br>
 <div class="codingSubSectionName">Subset format(Forward Search)</codingSubSectionName>
 <ul>
-     <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">(Do)</a>  </li>  
-	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">(Do)</a></li>
+     <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
+	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
+	 <li><a href="solution/combinationsum.html"">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
+	 <li><a href="solution/combinationsum-ii.html"">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
 </ul>
 
 </body>
