--- a/html/solution/subsets-ii.html
+++ b/html/solution/subsets-ii.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+   <link rel="stylesheet" type="text/css" href="../../css/utility.css">     <!-- external css file -->
+</head>
 
 <body>
 <pre><code>
@@ -40,7 +43,7 @@ class Solution {
 </code></pre>
 </body>
 
-<div style="color : red; font-size:30px">
+<div class="comment">
 Note:
 1 和subset 区别在于 输入为[1,2,2]可能会有重副的数字<br>
 2 解法为传一个boolean[]进去， 当前数后前面数一样的时候，必须前面访问了才行      if ( i>=1 && nums[i] == nums[i-1] && !visited[i-1]){
