--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -42,6 +42,8 @@ Subset（forward search）<br>
 <br>
 和位置无关， 例子 [1，2，3]是解， [1，3，2]则不是解，因为不能有重复<br>
 输入为 ： 大容器，小容器， 前进控制整数， 输入<br>
+time O(n*2^(n)) <br>
+
 <br>
 Note:<br>
 1. for( int i= level ; ; )   <br>
