added palindrom partitioning and combination

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -26,8 +26,10 @@
 <ul>
      <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
-	 <li><a href="solution/combinationsum.html"">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
-	 <li><a href="solution/combinationsum-ii.html"">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
+	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
+	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
+	 <li><a href="solution/palindrom partition.html">Palindrom Partition</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
+	 <li><a href="solution/combinations.html">Combinations</a> <a href="http://www.lintcode.com/en/problem/combinations/">Q</a></li>
 </ul>
 
 </body>
