added NQueens, NQueens ii and FindMissingNumber

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -13,16 +13,17 @@
 </div>
 
 
-<div class="codingSubSectionName">Permutation format(Global Search)</codingSubSectionName>
+<div class="codingSubSectionName">Permutation (回溯)</codingSubSectionName>
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
     <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
 	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
+
 </ul>
 
 <br>
-<div class="codingSubSectionName">Subset format(Forward Search)</codingSubSectionName>
+<div class="codingSubSectionName">Subset format （无回溯）</codingSubSectionName>
 <ul>
      <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
@@ -30,6 +31,9 @@
 	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
 	 <li><a href="solution/palindrom partition.html">Palindrom Partition</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
 	 <li><a href="solution/combinations.html">Combinations</a> <a href="http://www.lintcode.com/en/problem/combinations/">Q</a></li>
+	 <li><a href="solution/NQueens.html">NQueens</a><a href="http://www.lintcode.com/en/problem/n-queens/"> Q</a></li>
+	 <li><a href="solution/NQueens-ii.html">NQueens-ii</a><a href="http://www.lintcode.com/en/problem/n-queens-ii/"> Q</a></li>
+	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 </ul>
 
 </body>
