--- a/html/solution/FindMissingNumber-ii.html
+++ b/html/solution/FindMissingNumber-ii.html
@@ -87,6 +87,7 @@ public class Solution {
 1. search没有回溯，所以说是subset模板（ 大容器，小容器，pos控制符）。 与模斑的区别是这里不需要返回所有解，所以这里不许要大容器和小容器。 <br>
 2. 因为一次可能走1步或者两步， 所以说最外面的循环的次数与字符串的size无关，所以说用while( cur < n)   <br>
 3. j为每一层的控制符，和模斑一样，所以要仔细理解里面j的变化方法    <br>
+4. 还需要学习subset搜索的特殊结束条件 pos == n
 
 </div>
 
