--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <button id="codeButton" onclick="goToCodingLayout();">Code</button>   <!-- button -->
 <button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
 
-
+<img src="img/cat.jpg" alt="cat">
 
 
 </body>
