--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -13,7 +13,7 @@
 </div>
 
 
-<div class="codingSubSectionName">Permutation (回溯)</codingSubSectionName>
+<div class="codingSubSectionName">Permutation (回溯)</div>
 <ul>
     <li> <a href="solution/permutation.html">Permutation</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
@@ -23,7 +23,7 @@
 </ul>
 
 <br>
-<div class="codingSubSectionName">Subset format （无回溯）</codingSubSectionName>
+<div class="codingSubSectionName">Subset format （无回溯）</div>
 <ul>
      <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
@@ -36,6 +36,18 @@
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 </ul>
 
+
+<div class="codingSectionName"> BFS</div>
+<ul>
+     <li><a href="solution/topological Sorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+     <li><a href="solution/clone graph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
+     <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
+</ul>
+
+<div class="codingSectionName"> BFS + DFS</div>
+<ul>
+     <li><a href="solution/wordladder-ii.html">Wordladder-ii</a> <a href="http://www.lintcode.com/en/problem/word-ladder-ii/">Q</a>  </li>
+<ul>
 </body>
 
 
