--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -15,7 +15,7 @@
 
 <div class="codingSubSectionName">Permutation (回溯)</div>
 <ul>
-    <li> <a href="solution/permutation.html">Permutation</a> </li>
+    <li> <a style="color:red"; href="solution/permutation.html">Permutation (Template!)</a> </li>
     <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
     <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
 	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
@@ -23,9 +23,9 @@
 </ul>
 
 <br>
-<div class="codingSubSectionName">Subset format （无回溯）</div>
+<div class="codingSubSectionName">Subset（无回溯）</div>
 <ul>
-     <li><a href="solution/subset.html">Subset</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
+     <li><a style="color:red"; href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
 	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
 	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
@@ -34,6 +34,7 @@
 	 <li><a href="solution/NQueens.html">NQueens</a><a href="http://www.lintcode.com/en/problem/n-queens/"> Q</a></li>
 	 <li><a href="solution/NQueens-ii.html">NQueens-ii</a><a href="http://www.lintcode.com/en/problem/n-queens-ii/"> Q</a></li>
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
+	 <li><a href="solution/kSumII.html">K sum-ii</a> <a href="http://www.lintcode.com/en/problem/k-sum-ii/"> Q</a></li>
 </ul>
 
 
@@ -42,6 +43,7 @@
      <li><a href="solution/topological Sorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
      <li><a href="solution/clone graph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
+	 <li><a href="solution/Route Between Two Nodes in Graph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 </ul>
 
 <div class="codingSectionName"> BFS + DFS</div>
