added perfect square

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -35,6 +35,7 @@
 	 <li><a href="solution/NQueens-ii.html">NQueens-ii</a><a href="http://www.lintcode.com/en/problem/n-queens-ii/"> Q</a></li>
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 	 <li><a href="solution/kSumII.html">K sum-ii</a> <a href="http://www.lintcode.com/en/problem/k-sum-ii/"> Q</a></li>
+	 <li><a href="solution/perfectSquare.html">Perfect Squares(DFS超时，该用dp)</a> <a href="http://www.lintcode.com/en/problem/perfect-squares/"> Q</a></li>
 </ul>
 
 
