added restore ip address

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -38,6 +38,13 @@
 	 <li><a href="solution/perfectSquare.html">Perfect Squares(DFS超时，该用dp)</a> <a href="http://www.lintcode.com/en/problem/perfect-squares/"> Q</a></li>
 </ul>
 
+<br>
+<div class="codingSubSectionName">Subset String search(无回溯）</div>
+<ul>
+	 <li><a style="color:red"; href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
+	 <li><a href="solution/restoreIPAdress.html">Restore IP Address</a> <a href="http://www.lintcode.com/en/problem/restore-ip-addresses/">Q</a></li>
+
+</ul>
 
 <div class="codingSectionName"> BFS</div>
 <ul>
