--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -16,7 +16,7 @@ class Solution {
         // write your code here
         Arrays.sort(nums);
         
-        ArrayList<ArrayList<Integer>> results = new ArrayList<>();
+        ArrayList&lt;ArrayList<Integer>> results = new ArrayList<>();
         ArrayList<Integer> result = new ArrayList<>();
         dfs(results, result, nums, 0);
         return results;
