--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -47,10 +47,10 @@
 
 <div class="codingSectionName"> BFS</div>
 <ul>
-     <li><a href="solution/topological Sorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
-     <li><a href="solution/clone graph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
+     <li><a href="solution/topologicalSorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+     <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
-	 <li><a href="solution/Route Between Two Nodes in Graph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 </ul>
 
 <div class="codingSectionName"> BFS + DFS</div>
