added word search

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -45,6 +45,11 @@
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
 </ul>
 
+<div class="codingSubSectionName">2D matrix search</div>
+<ul>
+	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
+</ul>
+
 <div class="codingSectionName"> BFS</div>
 <ul>
      <li><a href="solution/topologicalSorting.html">Topological Sorting</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
