added merge series questions

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -61,7 +61,19 @@
 <div class="codingSectionName"> BFS + DFS</div>
 <ul>
      <li><a href="solution/wordladder-ii.html">Wordladder-ii</a> <a href="http://www.lintcode.com/en/problem/word-ladder-ii/">Q</a>  </li>
+</ul>
+
+
+<div class="codingSectionName"> Merge</div>
 <ul>
+	 <li><a style="color:red"; href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeTwoSortedList.html">Merge Two Sorted List</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeKSortedList.html">Merge KSorted List</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/MergeSort.html">Merge Sort (Template!)</a> <a href="">Q</a>  </li>
+</ul>
+
 </body>
 
 
