added linked list questions

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -69,9 +69,27 @@
 	 <li><a style="color:red"; href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="">Q</a>  </li>
      <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
      <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
-     <li><a href="solution/MergeTwoSortedList.html">Merge Two Sorted List</a> <a href="">Q</a>  </li>
-     <li><a href="solution/MergeKSortedList.html">Merge KSorted List</a> <a href="">Q</a>  </li>
      <li><a style="color:red"; href="solution/MergeSort.html">Merge Sort (Template!)</a> <a href="">Q</a>  </li>
+</ul>
+
+
+<div class="codingSectionName"> Linked List</div>
+<ul>
+     <li><a href="lecture/Lecture_6._Linked_List.pdf">Lecture</li>
+     <li><a style="color:red"; href="solution/MergeTwoSortedList.html">Merge Two Sorted List(Template!)</a> <a href="http://www.lintcode.com/en/problem/merge-two-sorted-lists/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/MergeKSortedList.html">Merge KSorted List(Template!)</a> <a href="http://www.lintcode.com/en/problem/merge-k-sorted-lists/">Q</a>  </li>
+     <li><a style="color:red"; href="solution/reverseLinkedList.html">Reverse Linked List(Template!)</a> <a href="http://www.lintcode.com/en/problem/reverse-linked-list/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/MiddleofLinkedList.html">Middle node of Linked List(Template!)</a> <a href="http://www.lintcode.com/en/problem/middle-of-linked-list/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/SortList.html">Sort List(Template!)</a> <a href="http://www.lintcode.com/en/problem/sort-list/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/IntersectionOfTwoLinkedList.html">Intersection of two linked list</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-linked-lists/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/RemoveDuplicatesfromSortedList.html">Remove duplicates from sorted list</a> <a href="http://www.lintcode.com/en/problem/remove-duplicates-from-sorted-list/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/RemoveDuplicatesfromSortedList.html-ii">Remove duplicates from sorted list-ii</a> <a href="http://www.lintcode.com/en/problem/remove-duplicates-from-sorted-list-ii/">Q</a>  </li>
+     <li><a href="solution/reverseLinkedList-ii.html">Reverse Linked List-ii</a> <a href="http://www.lintcode.com/en/problem/reverse-linked-list-ii/">Q</a>  </li>
+	 <li><a href="solution/CopyListwithRandomPointer.html">Copy List with Random Pointer</a> <a href="http://www.lintcode.com/en/problem/copy-list-with-random-pointer/">Q</a>  </li>
+	 <li><a href="solution/partitionList.html">Partition List</a> <a href="http://www.lintcode.com/en/problem/partition-list/">Q</a>  </li>
+	 <li><a href="solution/rotateList.html">rotate List</a> <a href="http://www.lintcode.com/en/problem/rotate-list/">Q</a>  </li>
+	 <li><a href="solution/reorderList.html">reorder List</a> <a href="http://www.lintcode.com/en/problem/reorder-list/">Q</a>  </li>
+	 <li><a href="solution/LinkedListCycle.html">LinkedList Cycle</a> <a href="http://www.lintcode.com/en/problem/linked-list-cycle/">Q</a>  </li>
 </ul>
 
 </body>
