--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 
 
-<button id="codeButton" onclick="goToCodingLayout();">Code</button>   <!-- button -->
+<button id="codeButton" color="#a9e0ea" onclick="goToCodingLayout();">c</button>   <!-- button -->
 <button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
 
-<img src="img/cat.jpeg" alt="cat">
+<!--  <img src="img/cat.jpeg" alt="cat"> --!? 
 
 
 </body>
