change button font color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-<button id="codeButton" color="#a9e0ea" onclick="goToCodingLayout();">c</button>   <!-- button -->
+<button id="codeButton" style=" color : #a9e0ea" onclick="goToCodingLayout();">c</button>   <!-- button -->
 <button id="usefulLinkButton" onclick="goTousefulLink();">Link</button>
 
 <!--  <img src="img/cat.jpeg" alt="cat"> --!? 
