--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -64,15 +64,6 @@
 </ul>
 
 
-<div class="codingSectionName"> Merge</div>
-<ul>
-	 <li><a style="color:red"; href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="">Q</a>  </li>
-     <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
-     <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
-     <li><a style="color:red"; href="solution/MergeSort.html">Merge Sort (Template!)</a> <a href="">Q</a>  </li>
-</ul>
-
-
 <div class="codingSectionName"> Linked List</div>
 <ul>
      <li><a href="lecture/Lecture_6._Linked_List.pdf">Lecture</li>
@@ -90,6 +81,18 @@
 	 <li><a href="solution/rotateList.html">rotate List</a> <a href="http://www.lintcode.com/en/problem/rotate-list/">Q</a>  </li>
 	 <li><a href="solution/reorderList.html">reorder List</a> <a href="http://www.lintcode.com/en/problem/reorder-list/">Q</a>  </li>
 	 <li><a href="solution/LinkedListCycle.html">LinkedList Cycle</a> <a href="http://www.lintcode.com/en/problem/linked-list-cycle/">Q</a>  </li>
+</ul>
+
+<div class="codingSectionName">Array</div>
+<ul>
+     <li><a href="lecture/Lecture_7._Array__Numbers.v3.3.pdf">Lecture</li>
+	 <li><a style="color:red"; href="solution/MergeTwoSortedArray.html">Merge Two Sorted Array(Template!)</a> <a href="http://www.lintcode.com/en/problem/merge-two-sorted-arrays/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/MergeSort.html">Merge Sort (Template!)</a> <a href="">Q</a>  </li>
+	 <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
+     <li><a href="solution/IntersectionOfTwoArrays.html">Intercection of two arrays</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+
+
 </ul>
 
 </body>
