added arrays problems

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -81,6 +81,7 @@
 	 <li><a href="solution/rotateList.html">rotate List</a> <a href="http://www.lintcode.com/en/problem/rotate-list/">Q</a>  </li>
 	 <li><a href="solution/reorderList.html">reorder List</a> <a href="http://www.lintcode.com/en/problem/reorder-list/">Q</a>  </li>
 	 <li><a href="solution/LinkedListCycle.html">LinkedList Cycle</a> <a href="http://www.lintcode.com/en/problem/linked-list-cycle/">Q</a>  </li>
+	 <li><a href="solution/RemoveNthNodefromEndOfList.html">Remove Nth node from end of list</a> <a href="http://www.lintcode.com/en/problem/linked-list-cycle/">Q</a>  </li>
 </ul>
 
 <div class="codingSectionName">Array</div>
@@ -91,6 +92,24 @@
 	 <li><a href="solution/MergeSortedArray.html">Merge Sorted Array</a> <a href="">Q</a>  </li>
      <li><a href="solution/MergeKSortedArrays.html">Merge KSorted Arrays</a> <a href="">Q</a>  </li>
      <li><a href="solution/IntersectionOfTwoArrays.html">Intercection of two arrays</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+	 <li><a href="solution/IntersectionOfTwoArrays-ii.html">Intercection of two arrays ii</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays-ii/#">Q</a>  </li>
+     <li><a style="color:red"; href="solution/2Sum.html">2Sum (template!)</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/2SumClosest.html">2Sum closest </a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/3Sum.html">3Sum</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/3SumClosest.html">3Sum closest</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/4Sum.html">4Sum</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/BestTimetoSellaStock-i.html">BestTimeSellStock-i</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
+     <li><a href="solution/BestTimetoSellaStock-ii.html">BestTimeSellStock-ii</a> <a href="">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/MediumOfTwoSortedArray.html">Medium of two sorted array</a> <a href="">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/MaximumSubarray.html">Maximum subarray</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MaximumSubarray-ii.html">Maximum subarray ii</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MaximumSubarrayDifference.html">Maximum subarray difference</a> <a href="">Q</a>  </li>
+     <li><a href="solution/MinimumSubarray.html">Minimal subarray</a> <a href="">Q</a>  </li>
+     <li><a href="solution/subarraySum.html">subarray sum</a> <a href="">Q</a>  </li>
+     <li><a href="solution/subarraySumClosest.html">subarray sum closest</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/partitionArray.html">Partition array</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/sortColors.html">sort colors</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/sortColors-ii.html">sort colors ii</a> <a href="">Q</a>  </li>
 
 
 </ul>
