--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -100,16 +100,16 @@
      <li><a href="solution/4Sum.html">4Sum</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/BestTimetoSellaStock-i.html">BestTimeSellStock-i</a> <a href="http://www.lintcode.com/en/problem/intersection-of-two-arrays/#">Q</a>  </li>
      <li><a href="solution/BestTimetoSellaStock-ii.html">BestTimeSellStock-ii</a> <a href="">Q</a>  </li>
-	 <li><a style="color:red"; href="solution/MediumOfTwoSortedArray.html">Medium of two sorted array</a> <a href="">Q</a>  </li>
-	 <li><a style="color:red" ; href="solution/MaximumSubarray.html">Maximum subarray</a> <a href="">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/MediumOfTwoSortedArray.html">Medium of two sorted array ( template!)</a> <a href="">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/MaximumSubarray.html">Maximum subarray (template!)</a> <a href="">Q</a>  </li>
      <li><a href="solution/MaximumSubarray-ii.html">Maximum subarray ii</a> <a href="">Q</a>  </li>
      <li><a href="solution/MaximumSubarrayDifference.html">Maximum subarray difference</a> <a href="">Q</a>  </li>
      <li><a href="solution/MinimumSubarray.html">Minimal subarray</a> <a href="">Q</a>  </li>
      <li><a href="solution/subarraySum.html">subarray sum</a> <a href="">Q</a>  </li>
      <li><a href="solution/subarraySumClosest.html">subarray sum closest</a> <a href="">Q</a>  </li>
-     <li><a style="color:red"; href="solution/partitionArray.html">Partition array</a> <a href="">Q</a>  </li>
-     <li><a style="color:red"; href="solution/sortColors.html">sort colors</a> <a href="">Q</a>  </li>
-     <li><a style="color:red"; href="solution/sortColors-ii.html">sort colors ii</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/partitionArray.html">partition array ( template!)</a> <a href="">Q</a>  </li>
+     <li><a style="color:red"; href="solution/sortColors.html">sort colors ( template!)</a> <a href="">Q</a>  </li>
+     <li><a href="solution/sortColors-ii.html">sort colors ii</a> <a href="">Q</a>  </li>
 
 
 </ul>
