added data structure

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -114,6 +114,16 @@
 
 </ul>
 
+
+<div class="codingSectionName">Data Structure</div>
+<ul>
+     <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
+	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
+	 <li><a href="solution/AnimalShelter.html">Animal shelter</a> <a href="http://www.lintcode.com/en/problem/animal-shelter/">Q</a>  </li>
+
+
+</ul>
+
 </body>
 
 
