added more data structure problems

--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -118,8 +118,17 @@
 <div class="codingSectionName">Data Structure</div>
 <ul>
      <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
+	 <li><a style="color:red"; href="solution/topKLargestNumbers.html">Top K largest numbers(priority queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
+	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify</a> <a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
 	 <li><a href="solution/AnimalShelter.html">Animal shelter</a> <a href="http://www.lintcode.com/en/problem/animal-shelter/">Q</a>  </li>
+	 <li><a href="solution/longestConsecutiveSequence.html">Longest Consecutive Sequence</a> <a href="http://www.lintcode.com/en/problem/longest-consecutive-sequence/">Q</a>  </li>
+	 <li><a href="solution/stackSorting.html">stack Sorting</a> <a href="http://www.lintcode.com/en/problem/stack-sorting/">Q</a>  </li>
+	 <li><a href="solution/minStack.html">min stack</a> <a href="http://www.lintcode.com/en/problem/min-stack/">Q</a>  </li>
+	 <li><a href="solution/Implement3stacksbysinglearray.html">Implement three stacks by a single array</a> <a href="http://www.lintcode.com/en/problem/implement-three-stacks-by-single-array/">Q</a>  </li>
+	 <li><a href="solution/implementQueueByTwoStacks.html">Implement a queue by two stacks</a> <a href="http://www.lintcode.com/en/problem/implement-queue-by-two-stacks/">Q</a>  </li>
+	 <li><a href="solution/implementStackbyTwoQueues.html">Implement a stack by two queues</a> <a href="http://www.lintcode.com/en/problem/implement-stack-by-two-queues/">Q</a>  </li>
+
 
 
 </ul>
