--- a/html/solution/AnimalShelter.html
+++ b/html/solution/AnimalShelter.html
@@ -12,7 +12,9 @@
 
 <pre><code>
 
+<div class="specialComment">
 Solution One : Using Two queues.
+</div>
 
 public class AnimalShelter {
 
@@ -100,10 +102,8 @@ Space complexity :     <br>
 
 </div>
 
-<div class="comment">
+<div class="specialcomment">
 Solution ii : using 一条链， 题目转变为一个自定义的queue上删除任意点。
-
-
 </div>
 
 
