--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -120,6 +120,7 @@
      <li><a href="lecture/Lecture_8._Data_Structure.pdf">Lecture</li>
 	 <li><a style="color:red"; href="solution/topKLargestNumbers.html">Top K largest numbers(priority queue)</a> <a href="http://www.lintcode.com/en/problem/top-k-largest-numbers/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
+	 <li><a style="color:yellow"; href="solution/LargestRectangleInHistogram.html">Largest Rectangle in Histogram(单调增栈，很难理解只能背诵）</a> <a href="http://www.lintcode.com/en/problem/largest-rectangle-in-histogram/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify</a> <a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
 	 <li><a href="solution/AnimalShelter.html">Animal shelter</a> <a href="http://www.lintcode.com/en/problem/animal-shelter/">Q</a>  </li>
 	 <li><a href="solution/longestConsecutiveSequence.html">Longest Consecutive Sequence</a> <a href="http://www.lintcode.com/en/problem/longest-consecutive-sequence/">Q</a>  </li>
