--- a/html/codingProblemsLayout.html
+++ b/html/codingProblemsLayout.html
@@ -56,6 +56,10 @@
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
+	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
+
+
 </ul>
 
 <div class="codingSectionName"> BFS + DFS</div>
@@ -102,6 +106,7 @@
      <li><a href="solution/BestTimetoSellaStock-ii.html">BestTimeSellStock-ii</a> <a href="">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/MediumOfTwoSortedArray.html">Medium of two sorted array ( template!)</a> <a href="">Q</a>  </li>
 	 <li><a style="color:red" ; href="solution/MaximumSubarray.html">Maximum subarray (template!)</a> <a href="">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/MaximumSubArrayProduct.html">Maximum subarray product(DP)</a> <a href="http://www.lintcode.com/en/problem/maximum-product-subarray/">Q</a>  </li>
      <li><a href="solution/MaximumSubarray-ii.html">Maximum subarray ii</a> <a href="">Q</a>  </li>
      <li><a href="solution/MaximumSubarrayDifference.html">Maximum subarray difference</a> <a href="">Q</a>  </li>
      <li><a href="solution/MinimumSubarray.html">Minimal subarray</a> <a href="">Q</a>  </li>
@@ -122,7 +127,7 @@
 	 <li><a style="color:red"; href="solution/MaxTree.html">Max Tree(单调栈）</a> <a href="http://www.lintcode.com/en/problem/max-tree/">Q</a>  </li>
 	 <li><a style="color:green"; href="solution/LargestRectangleInHistogram.html">Largest Rectangle in Histogram(单调增栈，很难理解只能背诵）</a> <a href="http://www.lintcode.com/en/problem/largest-rectangle-in-histogram/">Q</a>  </li>
 	 <li><a style="color:red"; href="solution/heaplify.html">Heaplify</a> <a href="http://www.lintcode.com/en/problem/heapify/">Q</a>  </li>
-	 <li><a href="solution/AnimalShelter.html">Animal shelter</a> <a href="http://www.lintcode.com/en/problem/animal-shelter/">Q</a>  </li>
+     <li><a href="solution/AnimalShelter.html">Animal shelter</a>LRU cache <a href="http://www.lintcode.com/en/problem/lru-cache/">Q</a>  </li>
 	 <li><a href="solution/longestConsecutiveSequence.html">Longest Consecutive Sequence</a> <a href="http://www.lintcode.com/en/problem/longest-consecutive-sequence/">Q</a>  </li>
 	 <li><a href="solution/stackSorting.html">stack Sorting</a> <a href="http://www.lintcode.com/en/problem/stack-sorting/">Q</a>  </li>
 	 <li><a href="solution/minStack.html">min stack</a> <a href="http://www.lintcode.com/en/problem/min-stack/">Q</a>  </li>
